--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,3 @@
-name: langgraph-gemini-tavily
 channels:
   - conda-forge
   - defaults
@@ -7,9 +6,12 @@ dependencies:
   - jupyterlab=4.2.*
   - ipywidgets=8.1.*
   - python-dotenv=1.0.*
+# [LangChain + LangGraph]
+  - langchain=0.2.*
   - langchain-community=0.2.*
   - langchain-google-genai=1.0.*
   - langgraph=0.1.*
-  - pip
+# [pip install]
+  - pip=24.0.*
   - pip:
-    - tavily-python==0.3.*
+    - -r requirements.txt
