--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,7 @@ channels:
   - defaults
 dependencies:
   - python=3.11.*
+  - matplotlib=3.9.*
   - jupyterlab=4.2.*
   - ipywidgets=8.1.*
   - python-dotenv=1.0.*
