--- a/environment.yml
+++ b/environment.yml
@@ -3,16 +3,14 @@ channels:
   - defaults
 dependencies:
   - python=3.11.*
-  - matplotlib=3.9.*
+  - pandas=2.2.*
   - jupyterlab=4.2.*
   - ipywidgets=8.1.*
   - python-dotenv=1.0.*
+  - yfinance=0.2.*
+  - mplfinance=0.12.*
 # [LangChain + LangGraph]
   - langchain=0.2.*
   - langchain-community=0.2.*
   - langchain-google-genai=1.0.*
   - langgraph=0.1.*
-# [pip install]
-  - pip=24.0.*
-  - pip:
-    - -r requirements.txt
